# sample-modern-cpp

./: .gitignore  README.md
data-serialization-format/nlohman/: CMakeLists.txt  readme.txt
data-serialization-format/nlohman/data/: products.json
data-serialization-format/nlohman/include/: Product.h  ProductFactory.h  ProductList.h
data-serialization-format/nlohman/src/: ProductFactory.cpp  main.cpp
data-serialization-format/yaml/: CMakeLists.txt  build.sh  readme.txt
data-serialization-format/yaml/data/: products.yaml
data-serialization-format/yaml/include/: Product.h  ProductFactory.h  ProductList.h
data-serialization-format/yaml/src/: ProductFactory.cpp  ProductList.cpp  main.cpp
design-pattern/command/: CMakeLists.txt
design-pattern/command/src/: main.cpp
design-pattern/observer/: CMakeLists.txt
design-pattern/observer/include/: IObserver.h  Observer.h  Subject.h
design-pattern/observer/src/: Observer.cpp  Subject.cpp  main.cpp
design-pattern/pimpl/: CMakeLists.txt
design-pattern/pimpl/include/: Sample.h  SampleImpl.h
design-pattern/pimpl/src/: Sample.cpp  SampleImpl.cpp  main.cpp
design-pattern/prodcons1/: CMakeLists.txt
design-pattern/prodcons1/include/: Data.h  IProcessor.h  Processor.h  Worker.h
design-pattern/prodcons1/src/: Processor.cpp  Worker.cpp  main.cpp
design-pattern/prodcons2/: CMakeLists.txt
design-pattern/prodcons2/include/: Consumer.h  Data.h  IConsumer.h  IProducer.h  Producer.h  Worker.h
design-pattern/prodcons2/src/: Consumer.cpp  Producer.cpp  Worker.cpp  main.cpp
design-pattern/singleton/: CMakeLists.txt  main.cpp
design-pattern/strategy/: CMakeLists.txt
design-pattern/strategy/include/: IStrategy.h  StrategyAAA.h  StrategyBBB.h  StrategyCCC.h  Worker.h
design-pattern/strategy/src/: StrategyAAA.cpp  StrategyBBB.cpp  StrategyCCC.cpp  Worker.cpp  main.cpp
inter-process-communication/gdbus/: build.sh  readme.txt
inter-process-communication/gdbus/client/: CMakeLists.txt  SampleDataClient.cpp  SampleDataClient.h  main.cpp
inter-process-communication/gdbus/idl/: SampleData.xml
inter-process-communication/gdbus/server/: CMakeLists.txt  SampleDataServer.cpp  SampleDataServer.h  main.cpp
standard-cpp/arguments/: CMakeLists.txt  main.cpp
standard-cpp/async/: CMakeLists.txt  main.cpp
standard-cpp/byte/: CMakeLists.txt  main.cpp
standard-cpp/lambda/: CMakeLists.txt  main.cpp
standard-cpp/map/: CMakeLists.txt  main.cpp
standard-cpp/optional/: CMakeLists.txt  main.cpp
standard-cpp/pair/: CMakeLists.txt  main.cpp
standard-cpp/set/: CMakeLists.txt  main.cpp
standard-cpp/thread/: CMakeLists.txt  main.cpp
standard-cpp/tuple/: CMakeLists.txt  main.cpp
standard-cpp/virtual-destructor/: CMakeLists.txt  build.sh  main.cpp
standard-cpp/virtual-test/: CMakeLists.txt  main.cpp
